--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="keywords" content="bioinformatics, autoimmune diseases, RNA-Seq, ChIP-Seq. ATAC-Seq, gene therapy, computational biology">
+    <meta name="keywords" content="Bioinformatics of Autoimmune Diseases">
+    <meta name="keywords" content="Hamid Ismail">
+    <meta name="keywords" content="Hamid D. Ismail">
+    <meta name="description" content="A book about bioinformatics approaches in autoimmune diseases, including sequencing, annotation, and computational analysis.">
+    <title>Bioinformatics of Autoimmune Diseases</title>
+
     <title>Hamid Ismail - Bioinformatics & HPC</title>
     <style>
         body {
@@ -89,13 +97,13 @@
                 display: block;
             }
 
-        #interests p {
+        #publications p {
             text-indent: 0;
             padding-left: 2em;
             text-align: justify;
         }
 
-            #interests p::first-line {
+            #publications p::first-line {
                 text-indent: -2em;
             }
     </style>
@@ -108,8 +116,8 @@
 
     <nav>
         <a href="#about">About</a>
-        <a href="#interests">Research Interests</a>
         <a href="#books">My Books</a>
+        <a href="#publications">My Publication</a>
         <a href="#contact">Contact</a>
     </nav>
 
