--- a/index.html
+++ b/index.html
@@ -143,43 +143,46 @@
 
     <section id="publications" class="publications">
         <h2>My Publications</h2>
-        <p class="publication-item">• Hamid Ismail, A Jones, J Kim, Robert Newman, Dukka Kc (2016). <em>RF-Phos: A Novel General Phosphorylation Site Prediction Tool Based on Random Forest.</em> BioMed Research International.</p>
-        <p class="publication-item">• Hamid Ismail, Robert Newman, Dukka Kc (2016). <em>RF-Hydroxysite: A Random Forest Based Predictor for Hydroxylation Sites.</em> Molecular BioSystems.</p>
-        <p class="publication-item">• C White, Hamid Ismail, H Saigo, Dukka Kc (2017). <em>CNN-BLPred: a Convolutional Neural Network Based Predictor for β-Lactamases (BL) and Their Classes.</em> BMC Bioinformatics.</p>
-        <p class="publication-item">• Hamid Ismail (2018). <em>Statistical Modeling, Linear Regression and ANOVA, A Practical Computational Perspective.</em> Lulu.com.</p>
-        <p class="publication-item">• Hamid Ismail, H Saigo, Dukka Kc (2018). <em>RF-NR: Random Forest Based Approach for Improved Classification of Nuclear Receptors.</em> IEEE/ACM Transactions on Computational Biology and Bioinformatics.</p>
-        <p class="publication-item">• Djaafar Rehrah, Mulumebet Worku, Hamid Ismail (2021). <em>PSIX-13 Activation of Cell Signaling Pathways by Galectins in Cow Blood.</em> Journal of Animal Science.</p>
-        <p class="publication-item">• Noha Soror, Hamid Ismail, Catherine Chung, Basem William (2021). <em>Narrowing of the Racial Disparities Gap in Survival of Patients with Mycosis Fungoides.</em> Blood.</p>
-        <p class="publication-item">• Yaser Ahmed, Hamid Ismail, Djaafar Rehrah, Mulumebet Worku (2021). <em>Immunomodulatory Effects of Gum Arabica in Goat Blood.</em> Journal of Animal Science.</p>
-        <p class="publication-item">• Yaser Ahmed, Hamid Ismail, Djaafar Rehrah, Mulumebet Worku (2021). <em>Effect of Gum Arabica (GA) Drench on Indicators of Anemia in Goats.</em> Journal of Animal Science.</p>
-        <p class="publication-item">• Mulumebet Worku, Bahrath Kumar, Hamid Ismail (2021). <em>Differential Expression of Cow Innate and Adaptive Responses Genes in Response to Eugenol.</em> Journal of Animal Science.</p>
-        <p class="publication-item">• Mulumebet Worku, D Rehrah, Hamid Ismail, E Asiamah, Sarah Adjei-Fremah (2021). <em>A Review of the Neutrophil Extracellular Traps (NETs) from Cow, Sheep and Goat Models.</em> International Journal of Molecular Sciences.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>The Sources of Genomic Data.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>The Origin of Genomic Information.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>The NCBI Entrez Databases.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>The Entrez Direct.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>R and Python Packages for the NCBI E-Utilities.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>Pairwise Sequence Alignment.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>NCBI Entrez E-Utilities and Applications.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail, C White, H Al-Barakati, Robert Newman, Dukka Kc (2022). <em>FEPS: A Tool for Feature Extraction from Protein Sequence.</em> Methods in Molecular Biology.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>Bioinformatics.</em> Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2022). <em>Basic Local Alignment Search Tool.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>Variant Discovery.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>Targeted Gene Metagenomic Data Analysis.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>Shotgun Metagenomic Data Analysis.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>Sequencing and Raw Sequence Data Quality Control.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>RNA-Seq Data Analysis.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>Mapping of Sequence Reads to the Reference Genomes.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• S Pakhrin, S Pokharel, P Pratyush, Meenal Chaudhari, Hamid Ismail, Dukka Kc (2023). <em>LMPhosSite: A Deep Learning-Based Approach for General Protein Phosphorylation Site Prediction.</em> Journal of Proteome Research.</p>
-        <p class="publication-item">• S Pokharel, P Pratyush, Hamid Ismail, J Ma, Dukka Kc (2023). <em>Integrating Embeddings from Multiple Protein Language Models to Improve Protein O-GlcNAc Site Prediction.</em> International Journal of Molecular Sciences.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>De Novo Genome Assembly.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>Chromatin Immunoprecipitation Sequencing.</em> In: Bioinformatics. Chapman and Hall/CRC.</p>
-        <p class="publication-item">• Hamid Ismail (2023). <em>Bioinformatics.</em> Chapman and Hall/CRC.</p>
-        <p class="publication-item">• P Pratyush, S Bahmani, S Pokharel, Hamid Ismail, Dukka Kc (2024). <em>LMCrot: An Enhanced Protein Crotonylation Site Predictor.</em> Bioinformatics (Oxford, England).</p>
-        <p class="publication-item">• T Bergquist et al. (2024). <em>Crowd-sourced Machine Learning Prediction of Long COVID.</em> EBioMedicine 108, 105333.</p>
-        <p class="publication-item">• Hamid Ismail (2025). <em>Narrowing of the Racial Disparities Gap in Survival of Patients with Mycosis Fungoides.</em> Clinical Lymphoma Myeloma and Leukemia, Elsevier.</p>
-        <p class="publication-item">• P Pratyush, S Pokharel, Hamid Ismail, S Bahmani, Dukka Kc (2025). <em>LMPTMSite: A Platform for PTM Site Prediction in Proteins.</em> Methods in Molecular Biology.</p>
-        <p class="publication-item">• P Pratyush, C Carrier, S Pokharel, Hamid Ismail, Meenal Chaudhari, D (2025). <em>CaLMPhosKAN: Prediction of General Phosphorylation Sites in Proteins.</em> Bioinformatics (Oxford, England).</p>
+        <ol>
+            <li class="publication-item">Hamid Ismail, A Jones, J Kim, Robert Newman, Dukka Kc (2016). <em>RF-Phos: A Novel General Phosphorylation Site Prediction Tool Based on Random Forest.</em> BioMed Research International.</li>
+            <li class="publication-item">Hamid Ismail, Robert Newman, Dukka Kc (2016). <em>RF-Hydroxysite: A Random Forest Based Predictor for Hydroxylation Sites.</em> Molecular BioSystems.</li>
+            <li class="publication-item">C White, Hamid Ismail, H Saigo, Dukka Kc (2017). <em>CNN-BLPred: a Convolutional Neural Network Based Predictor for β-Lactamases (BL) and Their Classes.</em> BMC Bioinformatics.</li>
+            <li class="publication-item">Hamid Ismail (2018). <em>Statistical Modeling, Linear Regression and ANOVA, A Practical Computational Perspective.</em> Lulu.com.</li>
+            <li class="publication-item">Hamid Ismail, H Saigo, Dukka Kc (2018). <em>RF-NR: Random Forest Based Approach for Improved Classification of Nuclear Receptors.</em> IEEE/ACM Transactions on Computational Biology and Bioinformatics.</li>
+            <li class="publication-item">Djaafar Rehrah, Mulumebet Worku, Hamid Ismail (2021). <em>PSIX-13 Activation of Cell Signaling Pathways by Galectins in Cow Blood.</em> Journal of Animal Science.</li>
+            <li class="publication-item">Noha Soror, Hamid Ismail, Catherine Chung, Basem William (2021). <em>Narrowing of the Racial Disparities Gap in Survival of Patients with Mycosis Fungoides.</em> Blood.</li>
+            <li class="publication-item">Yaser Ahmed, Hamid Ismail, Djaafar Rehrah, Mulumebet Worku (2021). <em>Immunomodulatory Effects of Gum Arabica in Goat Blood.</em> Journal of Animal Science.</li>
+            <li class="publication-item">Yaser Ahmed, Hamid Ismail, Djaafar Rehrah, Mulumebet Worku (2021). <em>Effect of Gum Arabica (GA) Drench on Indicators of Anemia in Goats.</em> Journal of Animal Science.</li>
+            <li class="publication-item">Mulumebet Worku, Bahrath Kumar, Hamid Ismail (2021). <em>Differential Expression of Cow Innate and Adaptive Responses Genes in Response to Eugenol.</em> Journal of Animal Science.</li>
+            <li class="publication-item">Mulumebet Worku, D Rehrah, Hamid Ismail, E Asiamah, Sarah Adjei-Fremah (2021). <em>A Review of the Neutrophil Extracellular Traps (NETs) from Cow, Sheep and Goat Models.</em> International Journal of Molecular Sciences.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>The Sources of Genomic Data.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>The Origin of Genomic Information.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>The NCBI Entrez Databases.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>The Entrez Direct.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>R and Python Packages for the NCBI E-Utilities.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>Pairwise Sequence Alignment.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>NCBI Entrez E-Utilities and Applications.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail, C White, H Al-Barakati, Robert Newman, Dukka Kc (2022). <em>FEPS: A Tool for Feature Extraction from Protein Sequence.</em> Methods in Molecular Biology.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>Bioinformatics.</em> Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2022). <em>Basic Local Alignment Search Tool.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>Variant Discovery.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>Targeted Gene Metagenomic Data Analysis.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>Shotgun Metagenomic Data Analysis.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>Sequencing and Raw Sequence Data Quality Control.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>RNA-Seq Data Analysis.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>Mapping of Sequence Reads to the Reference Genomes.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">S Pakhrin, S Pokharel, P Pratyush, Meenal Chaudhari, Hamid Ismail, Dukka Kc (2023). <em>LMPhosSite: A Deep Learning-Based Approach for General Protein Phosphorylation Site Prediction.</em> Journal of Proteome Research.</li>
+            <li class="publication-item">S Pokharel, P Pratyush, Hamid Ismail, J Ma, Dukka Kc (2023). <em>Integrating Embeddings from Multiple Protein Language Models to Improve Protein O-GlcNAc Site Prediction.</em> International Journal of Molecular Sciences.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>De Novo Genome Assembly.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>Chromatin Immunoprecipitation Sequencing.</em> In: Bioinformatics. Chapman and Hall/CRC.</li>
+            <li class="publication-item">Hamid Ismail (2023). <em>Bioinformatics.</em> Chapman and Hall/CRC.</li>
+            <li class="publication-item">P Pratyush, S Bahmani, S Pokharel, Hamid Ismail, Dukka Kc (2024). <em>LMCrot: An Enhanced Protein Crotonylation Site Predictor.</em> Bioinformatics (Oxford, England).</li>
+            <li class="publication-item">T Bergquist et al. (2024). <em>Crowd-sourced Machine Learning Prediction of Long COVID.</em> EBioMedicine 108, 105333.</li>
+            <li class="publication-item">Hamid Ismail (2025). <em>Narrowing of the Racial Disparities Gap in Survival of Patients with Mycosis Fungoides.</em> Clinical Lymphoma Myeloma and Leukemia, Elsevier.</li>
+            <li class="publication-item">P Pratyush, S Pokharel, Hamid Ismail, S Bahmani, Dukka Kc (2025). <em>LMPTMSite: A Platform for PTM Site Prediction in Proteins.</em> Methods in Molecular Biology.</li>
+            <li class="publication-item">P Pratyush, C Carrier, S Pokharel, Hamid Ismail, Meenal Chaudhari, D (2025). <em>CaLMPhosKAN: Prediction of General Phosphorylation Sites in Proteins.</em> Bioinformatics (Oxford, England).</li>
+        </ol>
+
     </section>
 
     <section id="contact">
